# OneClip

./: .gitignore  Cargo.toml
.github/workflows/: rust.yml
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/config/: config.ini
src-tauri/icons/: icon.icns
src-tauri/protos/: clip_frame.proto
src-tauri/src/: clip.rs  config.rs  connect.rs  main.rs
